<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:padding="@dimen/fab_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="@dimen/lable_width"
        android:layout_height="wrap_content"
        android:text="@string/date"

        />
    <TextView
        android:layout_width="@dimen/nav_magin_top"
        android:layout_height="wrap_content"
        android:text="@string/breakFast"
        />
    <TextView
        android:layout_width="@dimen/nav_magin_top"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        />
    <TextView
        android:layout_width="@dimen/nav_magin_top"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/meal_list_view"
        android:layout_marginTop="@dimen/line_margin"

        ></ListView>


</FrameLayout>
