<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/fab_margin"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:text="@string/deduction_type"
            />
        <TextView
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:id="@+id/deduction_confirm_type"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:text="@string/date"
            />
        <EditText
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:id="@+id/deduction_confirm_date"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            />
        <TextView
            android:layout_width="@dimen/input_field_width"
            android:layout_height="wrap_content"
            android:id="@+id/deduction_confirm_amount"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="@dimen/lable_width"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_clear"
            android:id="@+id/deduction_confirm_cancel"
            />
        <Button
            android:layout_width="@dimen/lable_width"
            android:layout_height="wrap_content"
            android:theme="@style/MyButton"
            android:layout_alignParentRight="true"
            android:text="@string/btn_submit"
            android:id="@+id/deduction_confirm_submit"
            />

    </RelativeLayout>

</LinearLayout>