<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    android:layout_weight="1"
    tools:context="com.example.hp.smartmess2.UserDeposit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="@string/_1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <TextView
                android:layout_width="@dimen/input_field_width"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_alignParentLeft="true"
                />
            <TextView
                android:layout_width="@dimen/input_field_width"
                android:layout_height="wrap_content"
                android:text="@string/deposit"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

<ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_deposit_list_view"
    android:layout_weight="@string/_0.5"
    ></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:text="@string/monthly_deposit"
                android:padding="@dimen/fab_margin"
                />
            <TextView
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:id="@+id/user_deposit_monthly_deposit"
                android:textSize="@dimen/_32dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:background="@color/light_blue"

                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:padding="@dimen/fab_margin"
                />
            <TextView
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:id="@+id/user_deposit_balance"
                android:textSize="@dimen/_32dp"
                android:textStyle="bold"
                android:background="@color/light_blue"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:text="@string/add_deposit"
                android:padding="@dimen/fab_margin"
                />
            <EditText
                android:layout_width="@dimen/lable_width"
                android:layout_height="wrap_content"
                android:theme="@style/MyButton"
                android:inputType="number|numberDecimal"
                android:id="@+id/user_deposit_input_deposit"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/MyButton"
                android:text="@string/btn_submit"
                android:id="@+id/user_deposit_btn_add_deposit"
                />

        </LinearLayout>


    </LinearLayout>
    </LinearLayout>

</FrameLayout>
